--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -31,8 +31,8 @@
         <div class="side-bar">
             <ul>
                 <a href="">Statistics</a>
-                <a href="TrainingOrders" class="selected">Training Orders</a>
-                <a href="Employees">Manage Employees</a>
+                <a href="/TrainingOrders" class="selected">Training Orders</a>
+                <a href="/Employees">Manage Employees</a>
                 <a href="">Account Settings</a>
             </ul>
         </div>
