--- a/WCSTrainer/Pages/Components/Sidebar.razor
+++ b/WCSTrainer/Pages/Components/Sidebar.razor
@@ -1,5 +1,20 @@
-﻿<p style="color: white;">HELLO</p>
+﻿@page "/sidebar"
+
+<div class="side-bar">
+    <ul>
+        <a href="/Statistics" class="@GetClass("Statistics")">Statistics</a>
+        <a href="/TrainingOrders" class="@GetClass("TrainingOrders")">Training Orders</a>
+        <a href="/Employees" class="@GetClass("Employees")">Manage Employees</a>
+        <a href="/AccountSettings" class="@GetClass("AccountSettings")">Account Settings</a>
+    </ul>
+</div>
 
 @code {
+    [Parameter]
+    public string? SelectedLink { get; set; }
+
+    private string GetClass(string linkName) {
+        return linkName == SelectedLink ? "selected" : string.Empty;
+    }
 
 }
