--- a/WCSTrainer/Pages/Employees/Details.cshtml
+++ b/WCSTrainer/Pages/Employees/Details.cshtml
@@ -4,17 +4,11 @@
 @{
     ViewData["Title"] = "Details";
 }
+@using WCSTrainer.Pages.Components
 
 <div class="panel">
     <div class="body">
-        <div class="side-bar">
-            <ul>
-                <a href="">Statistics</a>
-                <a asp-page="./Index">Training Orders</a>
-                <a asp-page="./Index">Manage Employees</a>
-                <a href="">Account Settings</a>
-            </ul>
-        </div>
+        <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
         <div class="properties">
             <div class="user-form">
                 <p class="title">Employee #@Html.DisplayFor(model => model.Employee.Id)</p>
