--- a/WCSTrainer/Pages/Employees/Index.cshtml
+++ b/WCSTrainer/Pages/Employees/Index.cshtml
@@ -5,17 +5,19 @@
     ViewData["Title"] = "Index";
 }
 
+@using WCSTrainer.Pages.Components
+
 <div class="panel">
     <div class="body">
         <div class="side-bar">
             <ul>
                 <a href="">Statistics</a>
-                <a href="TrainingOrders">Training Orders</a>
-                <a href="Employees" class="selected">Manage Employees</a>
+                <a href="/TrainingOrders">Training Orders</a>
+                <a href="/Employees" class="selected">Manage Employees</a>
                 <a href="">Account Settings</a>
             </ul>
-            
         </div>
+
         <div class="properties">
             
             <div class="order-list2">
