--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -42,7 +42,7 @@
                 <ul>
                     @foreach (var item in Model.TrainingOrder) {
                         <li id="@item.Id.ToString() @Model.getEmployee(item.trainee)" class="@item.status.ToString() searchable">
-                            <a asp-page="./Details" asp-route-id="@item.Id" class="info">
+                            <div class="info">
                                 <div class="title">
                                     <p>Training Order ID: @Html.DisplayFor(modelItem => item.Id) </p>
                                 </div>
@@ -62,7 +62,13 @@
                                         <p class="completed">@Html.DisplayFor(modelItem => item.status)</p>
                                     }
                                 </div>
-                            </a>
+                            </div>
+                            <a class="btn bg-btn btnBlue" asp-page="./Details" asp-route-id="@item.Id">View</a>
+                            @if (!item.status.Equals("Verified") && !item.status.Equals("Completed")) {
+                                <a class="btn bg-btn btnGreen" asp-page="./Edit" asp-route-id="@item.Id">Edit</a>
+                            } else {
+                                <a class="btn bg-btn btnWhite" style="text-decoration: line-through;">Edit</a>
+                            }
                             <a class="btn bg-btn btnRed" onclick="openModal(@item.Id)">Delete</a>
                         </li>
                     }
