--- a/WCSTrainer/Pages/TrainingOrders/Scheduling.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Scheduling.cshtml
@@ -12,7 +12,8 @@
         <div class="properties">
             <div class="scheduling">
                 <div class="settings">
-                    Settings
+                    <p>Total Training Orders: @Model.countOrders()</p>
+                    <p>Total Training Hours: @Model.countTotalOrderHours()</p>
                 </div>
                 <div class="main-view">
                     <div class="schedule">
@@ -25,9 +26,8 @@
                                     <p>@monthName</p>
                                 </div>
                                 <div class="info">
-                                    <p>Upcoming:</p>
+                                    <p>Preview:</p>
                                     <div class="order">Order #100 - 12/13/24</div>
-                                    <div class="order">Order #200 - 7/22/24</div>
                                     <div class="order">Order #300 - 3/6/24</div>
                                 </div>
                                 <div class="stats">
@@ -42,25 +42,10 @@
                             <p>Search</p>
                             <input type="search" />
                         </div>
-                        <div class="selections">
-                            <p class="title">Show in List:</p>
-                            <div class="section">
-                                <input type="checkbox" checked id="Verified" onchange="checkedBox(this)" />
-                                <p class="info">Verified</p>
-                            </div>
-                            <div class="section">
-                                <input type="checkbox" checked id="Active" onchange="checkedBox(this)" />
-                                <p class="info">Active</p>
-                            </div>
-                            <div class="section">
-                                <input type="checkbox" checked id="Awaiting Approval" onchange="checkedBox(this)" />
-                                <p class="info">Awaiting Approval</p>
-                            </div>
-                        </div>
                         <div class="buttons">
-                            <a asp-page="Create" class="btn nbg-btn btnWhite">Create Training Order</a>
-                            <a asp-page="AllView" class="btn nbg-btn btnWhite">Planning</a>
-                            <a asp-page="Scheduling" class="btn nbg-btn btnWhite">Scheduling</a>
+                            <a class="btn nbg-btn btnWhite">Button</a>
+                            <a class="btn nbg-btn btnWhite">Button</a>
+                            <a class="btn nbg-btn btnWhite">Button</a>
                         </div>
                     </div>
                 </div>
