--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -488,8 +488,11 @@ body {
                 flex-direction: column;
             }
                 .panel .body .properties .scheduling .settings {
+                    display: flex;
                     width: 100%;
                     height: 150px;
+                    font-size: 20px;
+                    gap: 20px;
                 }
                 .panel .body .properties .scheduling .main-view {
                     display: flex;
@@ -507,7 +510,7 @@ body {
                     }
                         .panel .body .properties .scheduling .main-view .schedule .month {
                             width: 180px;
-                            min-height: 200px;
+                            min-height: 180px;
                             display: flex;
                             flex-direction: column;
                             background-color: var(--gray2);
